@@ -4,7 +4,6 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class CustomizePageDataHandler extends Page<Object> implements IPageDataHandler {
@@ -24,8 +23,9 @@ public class CustomizePageDataHandler extends Page<Object> implements IPageDataH
     public void setWrenchTotalPage(long totalPage) {
         this.setPages(totalPage);
     }
+
     @Override
     public void setWrenchData(Collection<Object> records) {
-        this.setRecords(Collections.singletonList(records));
+        this.setRecords(List.copyOf(records));
     }
 }
